--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
 Hello World
+
+
+Hello! My name is Troy Alfelt, and I am currently a student at Thaddeus Stevens
+College of Technology enrolled in the Computer Science Engineering Technology
+program. Welcome to my page! Here I will show off some of my previous projects,
+demonstrate my skills, and let you get to know me a little better. Please enjoy
+your stay.
