added some header content

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-Hello World
-
+troyalfelt@gmail.com
+610-858-0966
 
 Hello! My name is Troy Alfelt, and I am currently a student at Thaddeus Stevens
 College of Technology enrolled in the Computer Science Engineering Technology
