--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,7 @@
+troyalfelt@gmail.com
+610-858-0966
+
+
 This is a choose-your-own-adventure game I created. This project got me used
 to the DOM method of manipulating HTML with javascript.
 
