added some semantic html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
+<header>
 troyalfelt@gmail.com
 610-858-0966
-
+</header>
+<p>
 Hello! My name is Troy Alfelt, and I am currently a student at Thaddeus Stevens
 College of Technology enrolled in the Computer Science Engineering Technology
 program. Welcome to my page! Here I will show off some of my previous projects,
 demonstrate my skills, and let you get to know me a little better. Please enjoy
 your stay.
+</p>
