--- a/photos.html
+++ b/photos.html
@@ -1,5 +1,6 @@
+<header>
 troyalfelt@gmail.com
 610-858-0966
-
+</header>
 Here I'm going to have a collection of photos with a small description.
 I can't start writing them yet because I need to collect them.
