added descriptions for photo album and sidebar

--- a/photos.html
+++ b/photos.html
@@ -2,5 +2,26 @@
 troyalfelt@gmail.com
 610-858-0966
 </header>
-Here I'm going to have a collection of photos with a small description.
-I can't start writing them yet because I need to collect them.
+
+<main>
+<p>Here I am playing bass with my much more talented father</p>
+
+<p>This is my mom and me at a Union game, Philadelphia's soccer team. As of
+  writing this they have the best record in the league this season!</p>
+
+<p>My dad, myself, and good ol' Uncle Bill</p>
+
+<p>A photo with family friend Rab when I took a road trip to California</p>
+
+<p>Me and my dad on Christmas morning</p>
+
+<p>My parents and I</p>
+</main>
+
+<aside>
+  <nav>
+    Home
+    Projects
+    Biography
+   </nav>
+</aside>
