--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,7 @@
 troyalfelt@gmail.com
 610-858-0966
 </header>
+<main>
 <p>
 This is a choose-your-own-adventure game I created. This project got me used
 to the DOM method of manipulating HTML with javascript.
@@ -15,3 +16,11 @@ my understanding of the DOM method.
 This is a small responsive landing page that was made to practice responsive
 design. It utilized the mobile-first methodology of web design.
 </p>
+</main>
+<aside>
+  <nav>
+    Home
+    Photo Album
+    Biography
+   </nav>
+</aside>
