--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 troyalfelt@gmail.com
 610-858-0966
 </header>
+<main>
 <p>
 Hello! My name is Troy Alfelt, and I am currently a student at Thaddeus Stevens
 College of Technology enrolled in the Computer Science Engineering Technology
@@ -9,3 +10,11 @@ program. Welcome to my page! Here I will show off some of my previous projects,
 demonstrate my skills, and let you get to know me a little better. Please enjoy
 your stay.
 </p>
+</main>
+<aside>
+  <nav>
+    Photo Album
+    Projects
+    Biography
+   </nav>
+</aside>
