added doctype and head

--- a/photos.html
+++ b/photos.html
@@ -1,8 +1,17 @@
+<html>
+  <head>
+    <meta charset="utf-8">
+
+    <title>Troy's Photo Page</title>
+  </head>
+
+
 <header>
 troyalfelt@gmail.com
 610-858-0966
 </header>
-
+<!DOCTYPE html>
+<body>
 <main>
 <p>Here I am playing bass with my much more talented father</p>
 
@@ -25,3 +34,5 @@ troyalfelt@gmail.com
     Biography
    </nav>
 </aside>
+</body>
+</html>
