--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+
+    <title>Troy's Projects Page</title>
+  </head>
+
+<body>
 <header>
 troyalfelt@gmail.com
 610-858-0966
@@ -24,3 +33,5 @@ design. It utilized the mobile-first methodology of web design.
     Biography
    </nav>
 </aside>
+</body>
+</html>
