--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<html>
+  <head>
+    <meta charset="utf-8">
+
+    <title>Troy's Home Page</title>
+  </head>
+
+<body>
 <header>
 troyalfelt@gmail.com
 610-858-0966
@@ -18,3 +26,5 @@ your stay.
     Biography
    </nav>
 </aside>
+</body>
+</html>
