added css page and started styling on em

--- a/index.html
+++ b/index.html
@@ -3,13 +3,26 @@
     <meta charset="utf-8">
 
     <title>Troy's Home Page</title>
+    <link rel="stylesheet" href="assets/style.css" type="text/css" />
   </head>
 
 <body>
 <header>
-troyalfelt@gmail.com
-610-858-0966
+  <address>
+    <a href="mailto:troyalfelt@gmail.com">troyalfelt@gmail.com</a>
+    <a href="tel:1-610-858-0966">610-858-0966</a>
+    <p>99 Cazillo Lane, Cotesville, PA 19320</p>
+  </address>
 </header>
+<div class="superdiv">
+  <aside>
+    <nav>
+      <a href="photos.html">Photo Album</a>
+      <a href="projects.html">Projects</a>
+      <a href="bio.html">Biography</a>
+     </nav>
+  </aside>
+  <div class="subdiv">
 <main>
 <p>
 Hello! My name is Troy Alfelt, and I am currently a student at Thaddeus Stevens
@@ -19,12 +32,9 @@ demonstrate my skills, and let you get to know me a little better. Please enjoy
 your stay.
 </p>
 </main>
-<aside>
-  <nav>
-    Photo Album
-    Projects
-    Biography
-   </nav>
-</aside>
+</div>
+</div>
+<footer></footer>
+<script src="assets/main.js"></script>
 </body>
 </html>
