--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
 
     <title>Troy's Projects Page</title>
+    <link rel="stylesheet" href="assets/style.css" type="text/css" />
+
   </head>
 
 <body>
