--- a/photos.html
+++ b/photos.html
@@ -3,6 +3,8 @@
     <meta charset="utf-8">
 
     <title>Troy's Photo Page</title>
+    <link rel="stylesheet" href="assets/style.css" type="text/css" />
+
   </head>
 
 
