set up grid page layout and linked photos

--- a/photos.html
+++ b/photos.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
   <head>
     <meta charset="utf-8">
 
@@ -6,35 +6,55 @@
     <link rel="stylesheet" href="assets/style.css" type="text/css" />
 
   </head>
-
-
-<header>
-troyalfelt@gmail.com
-610-858-0966
-</header>
-<!DOCTYPE html>
 <body>
-<main>
-<p>Here I am playing bass with my much more talented father</p>
-
-<p>This is my mom and me at a Union game, Philadelphia's soccer team. As of
-  writing this they have the best record in the league this season!</p>
-
-<p>My dad, myself, and good ol' Uncle Bill</p>
-
-<p>A photo with family friend Rab when I took a road trip to California</p>
-
-<p>Me and my dad on Christmas morning</p>
-
-<p>My parents and I</p>
-</main>
-
+<header>
+  <address>
+    <a href="mailto:troyalfelt@gmail.com">troyalfelt@gmail.com</a>
+    <a href="tel:1-610-858-0966">610-858-0966</a>
+    <p>99 Cazillo Lane, Cotesville, PA 19320</p>
+  </address>
+</header>
 <aside>
   <nav>
-    Home
-    Projects
-    Biography
+    <a href="bio.html">Biography</a>
+    <a href="projects.html">Projects</a>
+    <a href="index.html">Home</a>
    </nav>
 </aside>
+
+<main class="grid">
+  <div class = "subgrid">
+    <img src="assets/photos/bass.jpeg"/>
+    <p>Here I am playing bass with my much more talented father</p>
+  </div>
+
+  <div class="subgrid">
+    <img src="assets/photos/union.jpeg"/>
+    <p>This is my mom and me at a Union game, Philadelphia's soccer team. As of
+      writing this they have the best record in the league this season!</p>
+  </div>
+
+  <div class="subgrid">
+  <img src="assets/photos/bill.jpeg"/>
+  <p>My dad, myself, and good ol' Uncle Bill</p>
+</div>
+<div class="subgrid">
+  <img src="assets/photos/rab.jpeg"/>
+<p>A photo with family friend Rab when I took a road trip to California</p>
+</div>
+<div class="subgrid">
+  <img src="assets/photos/christmas.jpeg"/>
+<p>Me and my dad on Christmas morning</p>
+</div>
+<div class="subgrid">
+  <img src="assets/photos/family.jpeg"/>
+<p>My parents and I</p>
+</div>
+<div class="subgrid">
+  <img src="assets/photos/tree.JPG"/>
+  <p>Me as a lad climbing a tree out in Sedona</p>
+</div>
+</main>
+
 </body>
 </html>
