--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
   <head>
     <meta charset="utf-8">
 
@@ -10,30 +9,42 @@
 
 <body>
 <header>
-troyalfelt@gmail.com
-610-858-0966
+  <address>
+    <a href="mailto:troyalfelt@gmail.com">troyalfelt@gmail.com</a>
+    <a href="tel:1-610-858-0966">610-858-0966</a>
+    <p>99 Cazillo Lane, Cotesville, PA 19320</p>
+  </address>
 </header>
-<main>
+<aside>
+  <nav>
+    <a href="bio.html">Biography</a>
+    <a href="photos.html">Photo Album</a>
+    <a href="index.html">Home</a>
+   </nav>
+</aside>
+<main class="grid">
+  <div class="subgrid">
 <p>
 This is a choose-your-own-adventure game I created. This project got me used
 to the DOM method of manipulating HTML with javascript.
 </p>
+<a href="https://github.com/troyalfelt/dom-adventure-game">Link to code</a>
+</div>
+<div class="subgrid">
 <p>
 This a small game of tic-tac-toe. This project was done with a partner
 to demonstrate my mastery of git usage in a workflow, and further expanded
 my understanding of the DOM method.
 </p>
+<a href="https://github.com/troyalfelt/tic-tac-toe">Link to code</a>
+</div>
+<div class="subgrid">
 <p>
 This is a small responsive landing page that was made to practice responsive
 design. It utilized the mobile-first methodology of web design.
 </p>
+<a href="https://github.com/troyalfelt/responsive-landing-page">Link to code</a>
+</div>
 </main>
-<aside>
-  <nav>
-    Home
-    Photo Album
-    Biography
-   </nav>
-</aside>
 </body>
 </html>
