started responsive desing

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
 <div class="superdiv">
   <aside>
     <nav>
-      <a href="photos.html">Photo Album</a>
+      <a href="#" class="disabled">Home</a>
       <a href="projects.html">Projects</a>
+      <a href="photos.html">Photo Album</a>
       <a href="bio.html">Biography</a>
      </nav>
   </aside>
   <div class="subdiv">
+    <img src="https://placekitten.com/200/300"/>
 <main>
 <p>
 Hello! My name is Troy Alfelt, and I am currently a student at Thaddeus Stevens
