--- a/photos.html
+++ b/photos.html
@@ -16,9 +16,10 @@
 </header>
 <aside>
   <nav>
-    <a href="bio.html">Biography</a>
-    <a href="projects.html">Projects</a>
     <a href="index.html">Home</a>
+    <a href="projects.html">Projects</a>
+    <a class="disabled" href="#">Photo Album</a>
+    <a href="bio.html">Biography</a>
    </nav>
 </aside>
 
