--- a/projects.html
+++ b/projects.html
@@ -15,15 +15,19 @@
     <p>99 Cazillo Lane, Cotesville, PA 19320</p>
   </address>
 </header>
+<div class="superdiv">
 <aside>
   <nav>
-    <a href="bio.html">Biography</a>
+      <a href="index.html">Home</a>
+      <a class="disabled" href="#">Projects</a>
     <a href="photos.html">Photo Album</a>
-    <a href="index.html">Home</a>
+    <a href="bio.html">Biography</a>
+
    </nav>
 </aside>
 <main class="grid">
   <div class="subgrid">
+    <img src="assets/screenshots/adventure_game.png"/>
 <p>
 This is a choose-your-own-adventure game I created. This project got me used
 to the DOM method of manipulating HTML with javascript.
@@ -31,6 +35,7 @@ to the DOM method of manipulating HTML with javascript.
 <a href="https://github.com/troyalfelt/dom-adventure-game">Link to code</a>
 </div>
 <div class="subgrid">
+  <img src="assets/screenshots/tic-tac-toe.png"/>
 <p>
 This a small game of tic-tac-toe. This project was done with a partner
 to demonstrate my mastery of git usage in a workflow, and further expanded
@@ -39,6 +44,7 @@ my understanding of the DOM method.
 <a href="https://github.com/troyalfelt/tic-tac-toe">Link to code</a>
 </div>
 <div class="subgrid">
+  <img src="assets/screenshots/responsive.png"/>
 <p>
 This is a small responsive landing page that was made to practice responsive
 design. It utilized the mobile-first methodology of web design.
@@ -46,5 +52,7 @@ design. It utilized the mobile-first methodology of web design.
 <a href="https://github.com/troyalfelt/responsive-landing-page">Link to code</a>
 </div>
 </main>
+</div>
+
 </body>
 </html>
