--- a/photos.html
+++ b/photos.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
   <head>
     <meta charset="utf-8">
 
@@ -14,6 +15,7 @@
     <p>99 Cazillo Lane, Cotesville, PA 19320</p>
   </address>
 </header>
+<div class="superdiv">
 <aside>
   <nav>
     <a href="index.html">Home</a>
@@ -56,6 +58,6 @@
   <p>Me as a lad climbing a tree out in Sedona</p>
 </div>
 </main>
-
+</div>
 </body>
 </html>
