finished responsive design and started styling

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="superdiv">
   <aside>
     <nav>
-      <a href="#" class="disabled">Home</a>
+      <p class="disabled">Home</p>
       <a href="projects.html">Projects</a>
       <a href="photos.html">Photo Album</a>
       <a href="bio.html">Biography</a>
