--- a/photos.html
+++ b/photos.html
@@ -20,7 +20,7 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="projects.html">Projects</a>
-    <a class="disabled" href="#">Photo Album</a>
+    <p class="disabled">Photo Album</p>
     <a href="bio.html">Biography</a>
    </nav>
 </aside>
