--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
 <aside>
   <nav>
       <a href="index.html">Home</a>
-      <a class="disabled" href="#">Projects</a>
+      <p class="disabled">Projects</p>
     <a href="photos.html">Photo Album</a>
     <a href="bio.html">Biography</a>
 
