started adding different fonts

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <a href="tel:1-610-858-0966">610-858-0966</a>
     <p>99 Cazillo Lane, Cotesville, PA 19320</p>
   </address>
+  <h1>Hello!</h1>
 </header>
 <div class="superdiv">
   <aside>
@@ -25,9 +26,10 @@
      </nav>
   </aside>
   <div class="subdiv">
+
     <img src="https://placekitten.com/200/300"/>
 <main>
-<p>
+<p class="bigP">
 Hello! My name is Troy Alfelt, and I am currently a student at Thaddeus Stevens
 College of Technology enrolled in the Computer Science Engineering Technology
 program. Welcome to my page! Here I will show off some of my previous projects,
