--- a/photos.html
+++ b/photos.html
@@ -14,6 +14,7 @@
     <a href="tel:1-610-858-0966">610-858-0966</a>
     <p>99 Cazillo Lane, Cotesville, PA 19320</p>
   </address>
+  <h1>Photo Album</h1>
 </header>
 <div class="superdiv">
 <aside>
@@ -28,34 +29,34 @@
 <main class="grid">
   <div class = "subgrid">
     <img src="assets/photos/bass.jpeg"/>
-    <p>Here I am playing bass with my much more talented father</p>
+    <p class="desc">Here I am playing bass with my much more talented father</p>
   </div>
 
   <div class="subgrid">
     <img src="assets/photos/union.jpeg"/>
-    <p>This is my mom and me at a Union game, Philadelphia's soccer team. As of
+    <p class="desc">This is my mom and me at a Union game, Philadelphia's soccer team. As of
       writing this they have the best record in the league this season!</p>
   </div>
 
   <div class="subgrid">
   <img src="assets/photos/bill.jpeg"/>
-  <p>My dad, myself, and good ol' Uncle Bill</p>
+  <p class="desc">My dad, myself, and good ol' Uncle Bill</p>
 </div>
 <div class="subgrid">
   <img src="assets/photos/rab.jpeg"/>
-<p>A photo with family friend Rab when I took a road trip to California</p>
+<p class="desc">A photo with family friend Rab when I took a road trip to California</p>
 </div>
 <div class="subgrid">
   <img src="assets/photos/christmas.jpeg"/>
-<p>Me and my dad on Christmas morning</p>
+<p class="desc">Me and my dad on Christmas morning</p>
 </div>
 <div class="subgrid">
   <img src="assets/photos/family.jpeg"/>
-<p>My parents and I</p>
+<p class="desc">My parents and I</p>
 </div>
 <div class="subgrid">
   <img src="assets/photos/tree.JPG"/>
-  <p>Me as a lad climbing a tree out in Sedona</p>
+  <p class="desc">Me as a lad climbing a tree out in Sedona</p>
 </div>
 </main>
 </div>
