--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,7 @@
     <a href="tel:1-610-858-0966">610-858-0966</a>
     <p>99 Cazillo Lane, Cotesville, PA 19320</p>
   </address>
+  <h1>My Projects</h1>
 </header>
 <div class="superdiv">
 <aside>
@@ -29,7 +30,7 @@
 <main class="grid">
   <div class="subgrid">
     <img src="assets/screenshots/adventure_game.png"/>
-<p>
+<p class="desc">
 This is a choose-your-own-adventure game I created. This project got me used
 to the DOM method of manipulating HTML with javascript.
 </p>
@@ -37,7 +38,7 @@ to the DOM method of manipulating HTML with javascript.
 </div>
 <div class="subgrid">
   <img src="assets/screenshots/tic-tac-toe.png"/>
-<p>
+<p class="desc">
 This a small game of tic-tac-toe. This project was done with a partner
 to demonstrate my mastery of git usage in a workflow, and further expanded
 my understanding of the DOM method.
@@ -46,7 +47,7 @@ my understanding of the DOM method.
 </div>
 <div class="subgrid">
   <img src="assets/screenshots/responsive.png"/>
-<p>
+<p class="desc">
 This is a small responsive landing page that was made to practice responsive
 design. It utilized the mobile-first methodology of web design.
 </p>
