added photos to home and bio pages

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <a href="tel:1-610-858-0966">610-858-0966</a>
     <p>99 Cazillo Lane, Cotesville, PA 19320</p>
   </address>
-  <h1>Hello!</h1>
+  <h1>Greetings!</h1>
+
 </header>
 <div class="superdiv">
   <aside>
@@ -27,7 +28,7 @@
   </aside>
   <div class="subdiv">
 
-    <img src="https://placekitten.com/200/300"/>
+    <img class="bigPic" src="assets/photos/selfie.jpg"/>
 <main>
 <p class="bigP">
 Hello! My name is Troy Alfelt, and I am currently a student at Thaddeus Stevens
