--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
 </aside>
 <main class="grid">
   <div class="subgrid">
-    <img src="assets/screenshots/adventure_game.png"/>
+    <img class="project" src="assets/screenshots/adventure_game.png"/>
 <p class="desc">
 This is a choose-your-own-adventure game I created. This project got me used
 to the DOM method of manipulating HTML with javascript.
@@ -37,7 +37,7 @@ to the DOM method of manipulating HTML with javascript.
 <a href="https://github.com/troyalfelt/dom-adventure-game">Link to code</a>
 </div>
 <div class="subgrid">
-  <img src="assets/screenshots/tic-tac-toe.png"/>
+  <img class="project" src="assets/screenshots/tic-tac-toe.png"/>
 <p class="desc">
 This a small game of tic-tac-toe. This project was done with a partner
 to demonstrate my mastery of git usage in a workflow, and further expanded
@@ -46,7 +46,7 @@ my understanding of the DOM method.
 <a href="https://github.com/troyalfelt/tic-tac-toe">Link to code</a>
 </div>
 <div class="subgrid">
-  <img src="assets/screenshots/responsive.png"/>
+  <img class="project" src="assets/screenshots/responsive.png"/>
 <p class="desc">
 This is a small responsive landing page that was made to practice responsive
 design. It utilized the mobile-first methodology of web design.
@@ -55,6 +55,7 @@ design. It utilized the mobile-first methodology of web design.
 </div>
 </main>
 </div>
-
+<footer></footer>
+<script src="assets/main.js"></script>
 </body>
 </html>
