added accents and a randomizer

--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 
 <body>
 <header>
+  <div class="accentDiv1"></div>
+  <div class"midDiv">
   <address>
     <a href="mailto:troyalfelt@gmail.com">troyalfelt@gmail.com</a>
     <a href="tel:1-610-858-0966">610-858-0966</a>
     <p>99 Cazillo Lane, Cotesville, PA 19320</p>
   </address>
   <h1>Greetings!</h1>
-
+</div>
+<div class="accentDiv2"></div>
 </header>
 <div class="superdiv">
   <aside>
@@ -37,6 +40,7 @@ program. Welcome to my page! Here I will show off some of my previous projects,
 demonstrate my skills, and let you get to know me a little better. Please enjoy
 your stay.
 </p>
+<button class="random">Random Accent</button>
 </main>
 </div>
 </div>
