--- a/photos.html
+++ b/photos.html
@@ -8,14 +8,18 @@
 
   </head>
 <body>
-<header>
-  <address>
-    <a href="mailto:troyalfelt@gmail.com">troyalfelt@gmail.com</a>
-    <a href="tel:1-610-858-0966">610-858-0966</a>
-    <p>99 Cazillo Lane, Cotesville, PA 19320</p>
-  </address>
-  <h1>Photo Album</h1>
-</header>
+  <header>
+    <div class="accentDiv1"></div>
+    <div class"midDiv">
+    <address>
+      <a href="mailto:troyalfelt@gmail.com">troyalfelt@gmail.com</a>
+      <a href="tel:1-610-858-0966">610-858-0966</a>
+      <p>99 Cazillo Lane, Cotesville, PA 19320</p>
+    </address>
+    <h1>Photo Album</h1>
+  </div>
+  <div class="accentDiv2"></div>
+  </header>
 <div class="superdiv">
 <aside>
   <nav>
