moved random accent button, final changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 <header>
-  <div class="accentDiv1"></div>
+  <div class="accentDiv1"><button class="random">Random Accent</button></div>
   <div class"midDiv">
   <address>
     <a href="mailto:troyalfelt@gmail.com">troyalfelt@gmail.com</a>
@@ -40,7 +40,8 @@ program. Welcome to my page! Here I will show off some of my previous projects,
 demonstrate my skills, and let you get to know me a little better. Please enjoy
 your stay.
 </p>
-<button class="random">Random Accent</button>
+<p id="github"> You can view my Github in full <a href="https://github.com/">here</a>.</p>
+
 </main>
 </div>
 </div>
