final final changes

--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
 This is a choose-your-own-adventure game I created. This project got me used
 to the DOM method of manipulating HTML with javascript.
 </p>
-<a href="https://github.com/troyalfelt/dom-adventure-game">Link to code</a>
+<a href="https://github.com/troyalfelt/dom-adventure-game" class="gitLink">Link to code</a>
 </div>
 <div class="subgrid">
   <img class="project" src="assets/screenshots/tic-tac-toe.png"/>
@@ -47,7 +47,7 @@ This a small game of tic-tac-toe. This project was done with a partner
 to demonstrate my mastery of git usage in a workflow, and further expanded
 my understanding of the DOM method.
 </p>
-<a href="https://github.com/troyalfelt/tic-tac-toe">Link to code</a>
+<a href="https://github.com/troyalfelt/tic-tac-toe" class="gitLink">Link to code</a>
 </div>
 <div class="subgrid">
   <img class="project" src="assets/screenshots/responsive.png"/>
@@ -55,7 +55,7 @@ my understanding of the DOM method.
 This is a small responsive landing page that was made to practice responsive
 design. It utilized the mobile-first methodology of web design.
 </p>
-<a href="https://github.com/troyalfelt/responsive-landing-page">Link to code</a>
+<a href="https://github.com/troyalfelt/responsive-landing-page" class="gitLink">Link to code</a>
 </div>
 </main>
 </div>
